--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "geolib": "^3.3.3",
     "mongoose": "^7.0.4",
     "socket.io": "^4.6.1"
   }
