--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-maps": "^1.5.0",
     "react-native-radio-buttons-group": "^2.3.2"
   },
   "devDependencies": {
