--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-radio-buttons-group": "^2.3.2"
+    "react-native-radio-buttons-group": "^2.3.2",
+    "expo-av": "~13.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
