--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-maps": "^1.5.0",
+    "react-native-phone-call": "^1.2.0",
     "react-native-radio-buttons-group": "^2.3.2",
     "socket.io-client": "^4.6.1"
   },
