--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^7.0.1",
     "geolib": "^3.3.3",
     "mongoose": "^7.0.4",
+    "react-native-phone-call": "^1.2.0",
     "socket.io": "^4.6.1"
   }
 }
