--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "expo": "~48.0.11",
     "expo-av": "~13.2.1",
     "expo-location": "^15.1.1",
+    "expo-notifications": "^0.18.1",
     "expo-sensors": "^12.1.1",
     "expo-sms": "^11.2.1",
     "expo-status-bar": "~1.4.4",
